# enterprise-vault-migration

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/adr/: ADR-009-Docker.md
src/application/: __init__.py
src/migration_engine/: __init__.py  configuration.py  context.py  execution_result.py  metrics.py  orchestrator.py  pipeline.py  progress_tracker.py  state_machine.py  step_context.py
src/mock_ev/: __init__.py
src/mock_storionx/: __init__.py  exceptions.py
src/ports/: __init__.py  audit_repository_port.py  checkpoint_repository_port.py  checksum_calculator_port.py  clock_port.py  configuration_port.py  enterprise_vault_source_port.py  identifier_generator_port.py  logger_port.py  retry_repository_port.py  storionx_target_port.py
tests/e2e/: test_checkpoint_enabled_migration.py  test_checkpoint_resume_migration.py  test_end_to_end_migration_workflow.py  test_idempotent_retry_and_resume.py  test_mock_ev_domain_completion.py  test_parallel_upload_checkpoint.py  test_retry_enabled_migration.py
tests/integration/: __init__.py  test_mock_system_integration.py
tests/unit/: test_application_contracts.py  test_checkpoint_contracts.py  test_checkpoint_repository_port.py  test_concrete_pipeline_runner.py  test_discover_archives_step.py  test_execution_context.py  test_execution_report_reporting.py  test_execution_result.py  test_extract_items_step.py  test_extraction_result.py  test_finalize_migration_step.py  test_in_memory_checkpoint_repository.py  (+27 more)
(+178 files in other folders)
