[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-vault-migration"
version = "0.1.0"
description = "Enterprise-grade migration platform for transferring archived content from Veritas Enterprise Vault to storionX."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Beyzanur Arslan" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "coverage[toml]>=7.6.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "pre-commit>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
mypy_path = ["src"]
explicit_package_bases = true
strict = true
warn_unused_configs = true
show_error_codes = true
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
